--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,13 @@
   <groupId>com.example</groupId>
   <version>1.0-SNAPSHOT</version>
   <artifactId>helloworld</artifactId>
+  <repositories>
+        <repository>
+            <id>spantus</id>
+            <name>spantus sourceforge</name>
+            <url>http://streamreasoning.org/maven/</url>
+        </repository>
+    </repositories>
   <dependencies>
     <!-- Heroku deps -->
     <dependency>
