--- a/pom.xml
+++ b/pom.xml
@@ -37,10 +37,16 @@
     </dependency>
     <!-- KDTree -->
     <dependency>
-            <groupId>net.sourceforge</groupId>
-            <artifactId>javaml</artifactId>
-            <version>0.1.7</version>
-        </dependency>
+      <groupId>net.sourceforge</groupId>
+      <artifactId>javaml</artifactId>
+      <version>0.1.7</version>
+    </dependency>
+    <!-- JSON -->
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
