--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,13 @@
       <artifactId>unirest-java</artifactId>
       <version>1.4.9</version>
     </dependency>
-    
+    <!-- Serialisation -->
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+    </dependency>
+
   </dependencies>
   <build>
     <plugins>
